<resources>
    <string name="app_name">WashMe</string>
    <string name="app">WASH ME</string>
    <string name="sign_in">SIGN IN</string>
    <string name="log_in">LOG IN</string>
    <string name="login_with_gmail">LOGIN WITH GMAIL</string>
    <string name="submit">SUBMIT</string>
    <string name="e_mail">E-mail</string>
    <string name="password">Password</string>
    <string name="forgot_password"><u>Forgot Password?</u></string>
    <string name="dont_have_an_account"><u>Dont have an Account</u></string>
    <string name="user_name">User Name</string>
    <string name="create_account">CREATE ACCOUNT</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="cont">CONTINUE</string>
    <string name="already_have_an_account"><u>Already have an Account</u></string>
    <string name="reset_password">RESET PASSWORD</string>
    <string name="title_activity_see">see</string>
    <string name="vehicle_suv">SUV</string>
    <string name="vehicle_sedan">SEDAN/COUPE</string>
    <string name="vehicle_hatchback">HATCHBACK</string>
    <string name="vehicle_van">VAN/TRUCK</string>
    <string name="vehicle_convertible">CONVERTIBLE</string>
    <string name="next">Next</string>
    <string name="finish">Finish</string>
    <string name="back">Back</string>

    <!-- Validation Error -->
    <string name="err_name">The name field is required</string>
    <string name="err_email">The email must be a valid email</string>
    <string name="err_password">The password must be at least 6 characters</string>
    <string name="title_activity_home">Home</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_maps_location">Map</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="date_picker" />
    <string name="time_picker" />

    <!--David Edits and Additions-->
    <string name="toast_vehicle_type">Vehicle Type Selected</string>
    <string name="txt_package_toast">Package Type Selected</string>
    <string name="txt_service_toast">Service Type Selected</string>
</resources>
