<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/cars2"
    tools:context=".SignInTwo">

    <ImageView
        android:layout_width="119dp"
        android:layout_height="74dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"
        android:src="@drawable/carlogo"
        android:id="@+id/imageView" />

    <TextView
        android:id="@+id/logo_name"
        style="@style/LogoName"
        android:layout_width="111dp"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/imageView"
        android:layout_alignRight="@+id/imageView"
        android:layout_below="@+id/imageView"
        android:fontFamily="@font/chiller"
        android:text="@string/app_name"
        android:textSize="40sp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/regcontinue"
        android:layout_alignStart="@+id/regcontinue"
        android:layout_below="@+id/logo_name"
        android:layout_marginTop="11dp"
        android:fontFamily="@font/roboto"
        android:text="@string/create_account"
        android:textColor="@color/yellow_accent"
        android:textSize="16dp" />

    <EditText
        android:id="@+id/firstName"
        android:layout_width="257dp"
        android:layout_height="40dp"
        android:layout_alignLeft="@+id/phoneNumber"
        android:layout_alignStart="@+id/phoneNumber"
        android:layout_below="@+id/textView"
        android:layout_marginTop="16dp"
        android:background="@drawable/bottom_line"
        android:fontFamily="@font/roboto"
        android:hint="@string/first_name"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="18dp" />

    <EditText
        android:id="@+id/lastName"
        android:layout_width="257dp"
        android:layout_height="40dp"
        android:layout_alignLeft="@+id/firstName"
        android:layout_alignStart="@+id/firstName"
        android:layout_below="@+id/firstName"
        android:layout_marginTop="12dp"
        android:background="@drawable/bottom_line"
        android:fontFamily="@font/roboto"
        android:hint="@string/last_name"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="18dp" />

    <EditText
        android:id="@+id/phoneNumber"
        android:layout_width="255dp"
        android:layout_height="36dp"
        android:layout_above="@+id/userEmail"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="12dp"
        android:background="@drawable/bottom_line"
        android:fontFamily="@font/roboto"
        android:hint="@string/phone_number"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="18dp" />

    <EditText
        android:id="@+id/userEmail"
        android:layout_width="257dp"
        android:layout_height="40dp"
        android:layout_above="@+id/userPassword"
        android:layout_alignLeft="@+id/userPassword"
        android:layout_alignStart="@+id/userPassword"
        android:layout_marginBottom="13dp"
        android:background="@drawable/bottom_line"
        android:fontFamily="@font/roboto"
        android:hint="@string/e_mail"
        android:inputType="textEmailAddress"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="18dp" />

    <EditText
        android:id="@+id/userPassword"
        android:layout_width="255dp"
        android:layout_height="36dp"
        android:layout_above="@+id/continuebtn"
        android:layout_alignEnd="@+id/lastName"
        android:layout_alignRight="@+id/lastName"
        android:layout_marginBottom="18dp"
        android:background="@drawable/bottom_line"
        android:fontFamily="@font/roboto"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="18dp" />

    <Button
        style="@style/SignIN"
        android:layout_width="238dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="55dp"
        android:background="@drawable/rounder_button"
        android:paddingLeft="7dp"
        android:id="@+id/continuebtn"
        android:text="@string/submit" />
    <TextView
        android:id="@+id/regcontinue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="25dp"
        android:text="@string/already_have_an_account"
        android:textColor="@color/yellow_accent"
        android:textSize="12dp"
        android:onClick="LoginActivityStart"
        android:fontFamily="@font/roboto" />

</RelativeLayout>